# libv4l2cpp

./: .gitignore  CMakeLists.txt  main.cpp  mk_pkg.sh
inc/: V4l2MmapDevice.h
inc/v4l2cpp/: V4l2Access.h  V4l2Capture.h  V4l2Device.h  V4l2MmapDevice.h  V4l2MultiplaneCapture.h  V4l2MultiplaneCaputure.h  V4l2Output.h  V4l2ReadWriteDevice.h
src/: V4l2Access.cpp  V4l2Capture.cpp  V4l2Device.cpp  V4l2MmapDevice.cpp  V4l2MultiplaneCapture.cpp  V4l2Output.cpp  V4l2ReadWriteDevice.cpp  logger.cpp
